# mita

./: .dockerignore  .gitattributes  .gitignore  .scalafmt.conf  CNAME  Dockerfile  README.md  asset-manifest.json  build.sbt  get_dockerhub_version.py  get_version.py  index.html  ui-build.sbt
.github/integration-test/: Dockerfile-production  integration.test.scala
.github/ui-demo/: api.js  process.py
.github/workflows/: build-test.yml  client-js-release.yml  client-js-test.yml  client-python-release.yml  client-python-test.yml  client-rust-release.yml  client-rust-test.yml  client-test.yml  deploy-demo.yml  release.yml  sbt.yml  server-release.yml  server-test.yml  test.yml
app/: Hook.scala  Module.scala
app/controllers/: ApiController.scala  HomeController.scala
app/models/: Component.scala  Exportable.scala  Memory.scala  View.scala
app/security/: MitaAuthInfoRepository.scala  MitaAuthenticatorService.scala  MitaEnv.scala  MitaRequestProvider.scala  User.scala  UserService.scala
app/utils/: Auth.scala  FileSync.scala
client/js/: .gitignore  get_version.py  package.json  rollup.config.js  tsconfig.json
client/python/: .gitignore  init.py  setup.py
client/rust/: .gitignore  Cargo.toml  LICENSE
client/rust/src/: api.rs  client.rs  error.rs  jwt.rs  lib.rs  main.rs  mita_tqdm.rs  spinner_utils.rs  token_store.rs  view.rs  worker.rs
client/rust/src/components/: common.rs  line_chart.rs  logger.rs  mod.rs  progress_bar.rs  variable.rs
conf/: application.conf  logback.xml  routes
project/: FrontendRunHook.scala
static/css/: main.1c5e4381.css  main.1c5e4381.css.map  main.3baa5388.css  main.3baa5388.css.map  main.45e05f64.css  main.45e05f64.css.map  main.7f039933.css  main.7f039933.css.map  main.853febdb.css  main.853febdb.css.map  main.88722440.css  main.88722440.css.map  main.8cc7f74f.css  main.8cc7f74f.css.map  main.9bfab38c.css  main.9bfab38c.css.map  main.9fbc72e5.css  main.9fbc72e5.css.map  main.c19624db.css  main.c19624db.css.map  main.d172f6aa.css  main.d172f6aa.css.map  main.fadbcfed.css  main.fadbcfed.css.map
static/js/: main.0b326931.js  main.0b326931.js.LICENSE.txt  main.0b326931.js.map  main.0c4ef190.js  main.0c4ef190.js.LICENSE.txt  main.0c4ef190.js.map  main.1568cf20.js  main.1568cf20.js.LICENSE.txt  main.1568cf20.js.map  main.1d7037ad.js  main.1d7037ad.js.map  main.26699d6e.js  main.26699d6e.js.LICENSE.txt  main.26699d6e.js.map  main.3af9e7ff.js  main.3af9e7ff.js.LICENSE.txt  main.3af9e7ff.js.map  main.4c583e00.js  main.4c583e00.js.LICENSE.txt  main.4c583e00.js.map  main.5303c1ec.js  main.5303c1ec.js.LICENSE.txt  main.5303c1ec.js.map  main.5619ca7f.js  main.5619ca7f.js.LICENSE.txt  main.5619ca7f.js.map  main.6e4cb997.js  main.6e4cb997.js.LICENSE.txt  main.6e4cb997.js.map  main.7aec3e0a.js  main.7aec3e0a.js.map  (+1 more)
test/: ApiControllerSpec.scala
ui/: .env  .gitignore  package.json  tailwind.config.js
(+34 files in other folders)
