[package]
name = "mita-client"
version = "0.0.0"
authors = ["ControlNet <smczx@hotmail.com>"]
edition = "2021"
license = "MIT"
description = "Mita client"
homepage = "https://github.com/ControlNet/mita"
repository = "https://github.com/ControlNet/mita"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mita"
path = "src/main.rs"

[dependencies]
