[package]
name = "mita"
version = "0.0.0"
authors = ["ControlNet <smczx@hotmail.com>"]
edition = "2021"
license = "MIT"
description = "Mita client"
homepage = "https://github.com/ControlNet/mita"
repository = "https://github.com/ControlNet/mita"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
thiserror    = "1"
hostname     = "0"

# 可选
indicatif    = { version = "0.17", optional = true }
tracing      = { version = "0.1", features = ["log"], optional = true }

[features]
default = ["blocking"]
blocking = []              # 显式列出，避免误开 async
progress = ["indicatif"]   # 开关式进度条
log = ["tracing"]
#async = ["reqwest/async", "tokio", "tracing"]   # 若未来需要

[dev-dependencies]
#tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }