[package]
name = "mita"
version = "0.0.0"
authors = ["ControlNet <smczx@hotmail.com>"]
edition = "2021"
license = "MIT"
description = "Mita client"
homepage = "https://github.com/ControlNet/mita"
repository = "https://github.com/ControlNet/mita"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"]}
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
thiserror    = "1"
hostname     = "0"
clap         = { version = "4", features = ["derive"] }
dirs         = "5"

# Optional
indicatif    = { version = "0.17", optional = true }
tracing      = { version = "0.1", features = ["log"], optional = true }

[features]
default = ["blocking"]
blocking = []              # explicitly list to avoid accidentally enabling async
progress = ["indicatif"]   # switchable progress bar
log = ["tracing"]
#async = ["reqwest/async", "tokio", "tracing"]   # if needed in the future

[dev-dependencies]
#tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }